<resources>
    <string name="app_name">MedConnect</string>
    <string name="Login">Login</string>
    <string name="Password">Password</string>
    <string name="RepeatPassword">Repeat Password</string>
    <string name="Mobile">Mobile</string>
    <string name="Email">Email</string>
    <string name="Username">Username</string>
    <string name="SignUp">Sign Up</string>
    <string name="ConfCode">Enter Confirmation Code Here</string>
    <string name="Confirm">Confirm</string>
    <string name="Verify">Verify</string>
    <string name="NotAccount">Don\'t have account?</string>
    <string name="ForgetPass">Forget Your Password?</string>
    <string name="AgreeTerms">Agree to the Terms and Conditions</string>
    <string name="welcome_text">Welcome!</string>
    <string name="hi_user">Hi User</string>
    <string name="your_reminders">Your Reminders</string>
    <string name="view_more">View More</string>
    <string name="your_medications">Your Medications</string>
    <string name="medications_title">Medications</string>
    <string name="medication_name">Medication Name</string>
    <string name="dosage">Dosage</string>
    <string name="frequency">Frequency</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="refill_date">Refill Date</string>
    <string name="instructions">Instructions</string>
    <string name="medication_reminders_title">Medication Reminders</string>
    <string name="time_of_day">Time of Day</string>
    <string name="next_reminder_time">Next Reminder Time</string>
    <string name="snooze">Snooze</string>
    <string name="search_title">Search Medications</string>
    <string name="search_hint">Enter medication name</string>
    <string name="search_button">Search</string>
    <string name="milligrams">Milligrams</string>
    <string name="price">Price</string>
    <string name="pharmacy_name">Pharmacy Name</string>
    <string name="pharmacy_phone_number">Pharmacy Phone Number</string>
    <string name="pharmacy_address">Pharmacy Address</string>
    <string name="town">Town</string>
    <string name="search_medication">Search Medication</string>
    <string name="search">Search</string>
    <string name="region_hint">Select Region</string>
    <string name="sort_by_price_hint">Sort by Price</string>
    <string name="medication_name_hint">Medication Name</string>
    <string name="milligrams_hint">Milligrams</string>
    <string name="dosage_hint">Dosage</string>
    <string name="start_date_hint">Start Date</string>
    <string name="end_date_hint">End Date</string>
    <string name="refill_date_hint">Refill Date</string>
    <string name="save_changes">Save Changes</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="start_date_label">Start Date:</string>
    <string name="end_date_label">End Date:</string>
    <string name="refill_date_label">Refill Date:</string>
    <string name="frequency_label">Frequency Per Day:</string>
    <string name="instructions_label">Instructions:</string>
    <string name="add_prescription">Add Prescription</string>
    <string name="go_back">Go Back To Search</string>


    <string-array name="regions_array">
        <item>Nairobi</item>
        <item>Mombasa</item>
        <item>Kisumu</item>
        <item>Eldoret</item>
        <item>Nakuru</item>
    </string-array>

    <string-array name="sort_array">
        <item>Low to High</item>
        <item>High to Low</item>
    </string-array>

    <string-array name="frequency_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="instructions_array">
        <item>Before Meal</item>
        <item>After Meal</item>
    </string-array>
</resources>
