<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:backgroundTint="@android:color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">


        <LinearLayout
            android:id="@+id/text_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="16dp"
            android:layout_toStartOf="@+id/medication_image"
            android:orientation="vertical">

            <TextView
                android:id="@+id/medication_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medication_name"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dosage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:text="@string/dosage"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/frequency_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:text="@string/frequency_label"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/frequency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:text="@string/frequency"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/start_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:text="@string/start_date_label"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/end_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:text="@string/end_date_label"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/refill_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:text="@string/refill_date_label"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/refill_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/instructions_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:text="@string/instructions_label"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/instructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:textColor="@color/black" />
        </LinearLayout>

        <!-- Image on the right side -->
        <ImageView
            android:id="@+id/medication_image"
            android:layout_width="171dp"
            android:layout_height="224dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_medication_placeholder" />

        <!-- Buttons at the bottom -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_container"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/edit"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/delete"
                android:textColor="@color/white" />
        </LinearLayout>

    </RelativeLayout>
</androidx.cardview.widget.CardView>
