<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp"
    tools:context=".fragments.HomeFragment">

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/hi_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/reminderSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/welcomeTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/reminderTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/your_reminders"
            android:textSize="20sp"
            android:textColor="@color/textColorPrimary"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewMoreReminders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_more"
            android:textSize="14sp"
            android:textColor="@color/colorAccent"
            android:layout_marginEnd="8dp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/reminderRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/reminderSection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:paddingBottom="16dp"
        android:orientation="horizontal" />

    <LinearLayout
        android:id="@+id/medicationSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/reminderRecyclerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/medicationTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/your_medications"
            android:textSize="20sp"
            android:textColor="@color/textColorPrimary"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewMoreMedications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_more"
            android:textSize="14sp"
            android:textColor="@color/colorAccent"
            android:layout_marginEnd="8dp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/medicationRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/medicationSection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:paddingBottom="16dp"
        android:orientation="horizontal" />

</androidx.constraintlayout.widget.ConstraintLayout>
